--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  syncfusion_flutter_pdfviewer: ^18.3.47-beta
 
 dev_dependencies:
   flutter_test:
@@ -60,16 +61,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Goldman
+      fonts:
+        - asset: assets/Goldman-Regular.ttf
+        - asset: assets/Goldman-Bold.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+    - family: Oswald
+      fonts:
+        - asset: assets/Oswald-Regular.ttf
+        - asset: assets/Oswald-Regular.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
